fixed responsive Design

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,24 +22,9 @@ background-color: transparent;
 .card-columns .card {
     margin-bottom: 0.75rem;
   }
+
   
-  @media (min-width: 576px) {
-    .card-columns {
-      -webkit-column-count: 1;
-      -moz-column-count: 1;
-      column-count: 1;
-      -webkit-column-gap: 1.25rem;
-      -moz-column-gap: 1.25rem;
-      column-gap: 1.25rem;
-      orphans: 1;
-      widows: 1;
-    }
-    .card-columns .card {
-      display: inline-block;
-      width: 100%;
-    }
-  }
-  @media (min-width: 768px) {
+  @media screen and (min-width: 591px) {
     .card-columns {
       -webkit-column-count: 2;
       -moz-column-count: 2;
@@ -55,7 +40,7 @@ background-color: transparent;
       width: 100%;
     }
   }
-  @media (min-width: 1000px) {
+  @media screen and (min-width: 991px) {
     .card-columns {
       -webkit-column-count: 3;
       -moz-column-count: 3;
