--- a/css/custom.css
+++ b/css/custom.css
@@ -24,7 +24,23 @@ background-color: transparent;
   }
 
   
-  @media screen and (min-width: 591px) {
+  @media screen and (min-width: 576px) {
+    .card-columns {
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
+      -webkit-column-gap: 1.25rem;
+      -moz-column-gap: 1.25rem;
+      column-gap: 1.25rem;
+      orphans: 1;
+      widows: 1;
+    }
+    .card-columns .card {
+      display: inline-block;
+      width: 100%;
+    }
+  }
+  @media screen and (min-width: 768px) {
     .card-columns {
       -webkit-column-count: 2;
       -moz-column-count: 2;
@@ -40,7 +56,7 @@ background-color: transparent;
       width: 100%;
     }
   }
-  @media screen and (min-width: 991px) {
+  @media screen and (min-width: 1200px) {
     .card-columns {
       -webkit-column-count: 3;
       -moz-column-count: 3;
