--- a/css/custom.css
+++ b/css/custom.css
@@ -33,7 +33,7 @@ background-color: transparent;
       widows: 1;
     }
     .card-columns .card {
-      display: inline-block;
+      display: flex;
       width: 100%;
     }
   }
@@ -49,7 +49,7 @@ background-color: transparent;
       widows: 1;
     }
     .card-columns .card {
-      display: inline-block;
+      display: flex;
       width: 100%;
     }
   }
@@ -65,7 +65,7 @@ background-color: transparent;
       widows: 1;
     }
     .card-columns .card {
-      display: inline-block;
+      display: flex;
       width: 100%;
     }
   }
