--- a/css/custom.css
+++ b/css/custom.css
@@ -91,3 +91,18 @@ background-color: transparent;
   .bg-Mensa {
     background-color: #4CAF50 !important;
   }
+
+/*
+carousel
+*/
+.carousel {
+  background:#007aeb;
+}
+.carousel-item .img-fluid {
+  width:100%;
+}
+.carousel-item a {
+  display: block;
+  width:100%;
+}
+
