Edit on OxOst Site: More info

--- a/css/custom.css
+++ b/css/custom.css
@@ -93,3 +93,19 @@ background-color: transparent;
   }
 
 
+
+
+
+
+
+.opening-table{
+  max-width: 540px;
+}
+
+.icon{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 25px;
+}
+
