--- a/css/custom.css
+++ b/css/custom.css
@@ -95,7 +95,14 @@ background-color: transparent;
 
 
 
-
+/* Background pattern from Toptal Subtle Patterns */
+.Info-Container{
+  background-image: url(../images/infobackground.png);
+}
+/* Background pattern from Toptal Subtle Patterns */
+.Menu-Container{
+  background-image: url(../images/infoBackgroundDark.png);
+}
 
 
 .opening-table{
@@ -108,4 +115,68 @@ background-color: transparent;
   margin-right: auto;
   margin-bottom: 25px;
 }
+
+/*TODO Menu-Pic einbinden*/
+#Menu-Pic {
+  background-image: url("../images/Menu_.jpg");
+  height: 40vh;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.embed-responsive {
+  position: relative;
+  display: block;
+  height: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+
+
+/* Footer */
+
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+
+body {
+  position: relative;
+  min-height: 100%;
+}
+
+.footerSpacing {
+  padding-bottom: 4rem;
+}
+@media screen and (max-width: 350px) {
+  .footerSpacing {
+    padding-bottom: 5rem;
+  }
+}
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
+.footer a {
+  color: white;
+}
+.footer a:hover {
+  color: rgb(170, 170, 170);
+}
+
 
