--- a/css/custom.css
+++ b/css/custom.css
@@ -201,3 +201,11 @@ body {
 }
 
 
+#OxOstCarousel1 {
+  background-image: url("../LocationSites/Oxfords/OxfordCharles/images/Placeholder.jpg");
+  height: 13rem;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+ }
