--- a/css/custom.css
+++ b/css/custom.css
@@ -86,15 +86,11 @@ background-color: transparent;
   }
 
   .bg-OxFord {
-    background-color: #03A9F4 !important;
-    background-color: rgb(153, 119, 24) !important;
-    background-color: #8D6E63 !important;
+    background-color: #795548 !important;
 
   }
   
   .bg-Mensa {
-    background-color: #4CAF50 !important;
-    background-color: rgb(62, 109, 170) !important;
     background-color: #0288D1 !important;
   }
 
